# muni

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md
bvr/cad/: Cargo.toml  KN6104.dwg  README.md  rail.stl  shell-panels-spec.md  viewer.html
bvr/cad/config/: materials.toml
bvr/cad/exports/: access_panel.stl  battery_tray.stl  bvr1_frame.stl  electronics_plate.stl  electronics_plate_simple.stl  motor_mount_8in.stl  motor_mount_plate_8in.stl  motor_mount_tab_8in.stl  ref_banana.stl  ref_battery_downtube.stl  ref_gps_antenna.stl  ref_hub_motor_hoverboard.stl  ref_human.stl  ref_jetson_recomputer.stl  ref_lidar_mid360.stl  sensor_mount.stl  sensor_mount_base.stl  uumotor_kn6104.stl  uumotor_svb6hs.stl  wheel_spacer_8in.stl  wheel_spacer_flat_8in.stl
bvr/cad/exports/dxf/: shell_skid_plate.dxf  shell_top_lid.dxf  shell_wall_wrap.dxf
bvr/cad/exports/gltf/: access_panel.glb  battery_tray.glb  bvr0_assembly.glb  bvr1_assembly_realistic.glb  corner_bracket.glb  electronics_plate.glb  extrusion_2020_100mm.glb  extrusion_2020_500mm.glb  motor_mount_8in.glb  motor_mount_plate_8in.glb  motor_mount_tab_8in.glb  ref_battery_custom.glb  ref_battery_downtube.glb  ref_camera_insta360.glb  ref_dcdc.glb  ref_estop.glb  ref_gps_antenna.glb  ref_hub_motor_8in.glb  ref_hub_motor_hoverboard.glb  ref_jetson_recomputer.glb  ref_lidar_mid360.glb  ref_vesc_6.glb  sensor_mount.glb  sensor_mount_base.glb  shell_front.glb  shell_rear.glb  shell_side_left.glb  shell_side_right.glb  shell_skid_plate.glb  shell_top.glb  shell_top_lid.glb  shell_wall_wrap.glb  tnut_m5.glb  uumotor_kn6104.glb  uumotor_svb6hs.glb  wheel_spacer_8in.glb  wheel_spacer_flat_8in.glb
bvr/cad/exports/stl/: base_tray.stl  bvr0_assembly.stl  bvr1_assembly.stl  bvr1_frame.stl  corner_bracket.stl  electronics_plate.stl  extrusion_2020_100mm.stl  motor_mount_8in.stl  motor_mount_plate_8in.stl  motor_mount_tab_8in.stl  ref_battery_custom.stl  ref_camera_insta360.stl  ref_dcdc.stl  ref_estop.stl  ref_hub_motor_8in.stl  ref_vesc_6.stl  sensor_mount.stl  sensor_mount_base.stl  shell_front.stl  shell_rear.stl  shell_side_left.stl  shell_side_right.stl  shell_skid_plate.stl  shell_top.stl  shell_top_lid.stl  shell_wall_wrap.stl  tnut_m5.stl  uumotor_mount.stl  wheel_spacer_8in.stl  wheel_spacer_flat_8in.stl
bvr/cad/exports/usd/: access_panel.usda  base_tray.usda  battery_tray.usda  bvr1_frame.usda  bvr1_robot.usda  corner_bracket.usda  electronics_plate.usda  extrusion_2020_100mm.usda  extrusion_2020_500mm.usda  motor_mount_8in.usda  motor_mount_plate_8in.usda  motor_mount_tab_8in.usda  ref_banana.usda  ref_battery_custom.usda  ref_battery_downtube.usda  ref_camera_insta360.usda  ref_dcdc.usda  ref_estop.usda  ref_gps_antenna.usda  ref_hub_motor_8in.usda  ref_hub_motor_hoverboard.usda  ref_human.usda  ref_jetson_recomputer.usda  ref_lidar_mid360.usda  ref_vesc_6.usda  sensor_mount.usda  sensor_mount_base.usda  shell_front.usda  shell_rear.usda  shell_side_left.usda  shell_side_right.usda  shell_skid_plate.usda  shell_top.usda  shell_top_lid.usda  shell_wall_wrap.usda  tnut_m5.usda  uumotor_kn6104.usda  uumotor_mount.usda  uumotor_svb6hs.usda  wheel_spacer_8in.usda  (+1 more)
bvr/cad/src/: lib.rs  step.rs
bvr/cad/src/export/: dxf.rs  gltf.rs  materials.rs  mod.rs  stl.rs  usd.rs
bvr/cad/src/parts/: access_panel.rs  assembly.rs  base_tray.rs  battery.rs  electronics.rs  electronics_plate.rs  frame.rs  hub_motor.rs  mod.rs  motor_mount.rs  scale_refs.rs  sensor_mount.rs  sensors.rs  shell.rs  uumotor.rs  wheel_spacer.rs
bvr/firmware/: Cargo.toml  Cross.toml  README.md  deploy.sh
bvr/firmware/bins/bvrd/: Cargo.toml
bvr/firmware/bins/cli/: Cargo.toml
bvr/firmware/bins/train/: Cargo.toml
bvr/firmware/config/: bvr-sync.sh  bvr.toml  can.service  kiosk.service
bvr/firmware/config/policies/: nav-v0.1.0.json.example
bvr/firmware/crates/can/: Cargo.toml
bvr/firmware/crates/control/: Cargo.toml
bvr/firmware/crates/costmap/: Cargo.toml
bvr/firmware/crates/dispatch/: Cargo.toml
bvr/firmware/crates/hal/: Cargo.toml
bvr/firmware/crates/integration-tests/: Cargo.toml  README.md  SETUP_COMPLETE.md
bvr/firmware/crates/lidar/: Cargo.toml  README.md
bvr/firmware/crates/localization/: Cargo.toml
bvr/firmware/docs/: blower-control.md
depot/discovery/: Cargo.toml  Dockerfile
depot/discovery/src/: main.rs
depot/dispatch/: Cargo.toml  Dockerfile
depot/dispatch/migrations/: 001_initial.sql
depot/dispatch/src/: main.rs
depot/gps-status/: Cargo.toml  Dockerfile
depot/gps-status/src/: main.rs
depot/map-api/: Cargo.toml  Dockerfile
depot/map-api/src/: main.rs
depot/mapper/: Cargo.toml  Dockerfile
depot/mapper/src/: main.rs
firmware/: Cargo.toml  Cross.toml  README.md  deploy.sh
firmware/bins/bvr-cli/: Cargo.toml
firmware/bins/bvrd/: Cargo.toml
firmware/bins/cli/: Cargo.toml
firmware/bins/operator/: Cargo.toml
firmware/config/: bvr-sync.service  bvr-sync.sh  bvr-sync.timer  bvr.toml  bvrd.service  can.service  kiosk.service  rclone.conf.example
firmware/crates/bvr-can/: Cargo.toml
firmware/crates/bvr-control/: Cargo.toml
firmware/crates/bvr-hal/: Cargo.toml
firmware/crates/bvr-state/: Cargo.toml
firmware/crates/bvr-teleop/: Cargo.toml
firmware/crates/bvr-types/: Cargo.toml
firmware/crates/camera/: Cargo.toml
firmware/crates/can/: Cargo.toml
firmware/crates/control/: Cargo.toml
firmware/crates/gps/: Cargo.toml
firmware/crates/hal/: Cargo.toml
firmware/crates/localization/: Cargo.toml
firmware/crates/metrics/: Cargo.toml
firmware/crates/recording/: Cargo.toml
firmware/crates/sim/: Cargo.toml
firmware/crates/state/: Cargo.toml
firmware/crates/teleop/: Cargo.toml
firmware/crates/tools/: Cargo.toml
firmware/crates/types/: Cargo.toml
firmware/crates/ui/: Cargo.toml
mcu/: Cargo.toml  README.md  rust-toolchain.toml
mcu/.cargo/: config.toml
mcu/bins/esp32s3/: Cargo.toml  README.md
mcu/bins/rover-leds/: Cargo.toml  build.rs  memory.x
mcu/bins/rp2350/: Cargo.toml  build.rs  memory.x
mcu/crates/mcu-core/: Cargo.toml
mcu/crates/mcu-leds/: Cargo.toml
(+405 files in other folders)
