[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"
description = "Mission dispatch service for the Depot"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

[profile.release]
lto = true
opt-level = "z"
strip = true
