[package]
name = "gps-status"
version = "0.1.0"
edition = "2021"
description = "GPS base station status service for the Depot"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util"] }
tokio-serial = "5.4"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

[profile.release]
lto = true
opt-level = "z"
strip = true
