[package]
name = "map-api"
version = "0.1.0"
edition = "2021"
description = "Map serving API for Depot"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[profile.release]
lto = true
opt-level = "z"
strip = true
