[package]
name = "bvrd"
description = "Main daemon for bvr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
can = { workspace = true }
control = { workspace = true }
hal = { workspace = true }
state = { workspace = true }
teleop = { workspace = true }
tools = { workspace = true }
sim = { workspace = true }
ui = { workspace = true }
camera = { workspace = true }
gps = { workspace = true }
localization = { workspace = true }
recording = { workspace = true }
metrics = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }


