[package]
name = "cli"
description = "CLI tool for bvr debugging and control"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
teleop = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

