[package]
name = "bvr-can"
description = "CAN bus abstraction and ESC protocol for bvr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bvr-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3"

