[package]
name = "bvr-teleop"
description = "LTE teleop communications for bvr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bvr-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

