[package]
name = "camera"
description = "Camera capture and streaming for bvr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Camera capture (cross-platform)
nokhwa = { version = "0.10", features = ["input-native"] }

# Image encoding
image = { version = "0.25", default-features = false, features = ["jpeg"] }
