[package]
name = "teleop"
description = "LTE teleop communications for bvr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

