[package]
name = "bvr"
description = "CLI tool for bvr debugging and control"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { workspace = true }
teleop = { workspace = true }
can = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }



