[package]
name = "muni"
description = "Muni robotics CLI: rover control, GPS configuration, and diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "muni"
path = "src/main.rs"

[dependencies]
types = { workspace = true }
teleop = { workspace = true }
can = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# TUI for GPS monitor
ratatui = "0.29"
crossterm = "0.28"

# Serial for GPS
tokio-serial = "5.4"



