[package]
name = "train"
description = "RL training for BVR navigation policies"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "train"
path = "src/main.rs"

[dependencies]
rl = { workspace = true }
sim = { workspace = true }
types = { workspace = true }
policy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
