[package]
name = "dispatch"
version.workspace = true
edition.workspace = true
description = "Dispatch client for connecting rovers to the depot dispatch service"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
